; ModuleID = '/home/carl/AnghaBench/linux/drivers/dma/ioat/extr_dma.c_ioat_start_null_desc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/dma/ioat/extr_dma.c_ioat_start_null_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ioatdma_chan = type { i32, i32 }

@IOAT_CHAN_DOWN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ioat_start_null_desc(%struct.ioatdma_chan* %0) #0 {
  %2 = alloca %struct.ioatdma_chan*, align 8
  store %struct.ioatdma_chan* %0, %struct.ioatdma_chan** %2, align 8
  %3 = load %struct.ioatdma_chan*, %struct.ioatdma_chan** %2, align 8
  %4 = getelementptr inbounds %struct.ioatdma_chan, %struct.ioatdma_chan* %3, i32 0, i32 0
  %5 = call i32 @spin_lock_bh(i32* %4)
  %6 = load i32, i32* @IOAT_CHAN_DOWN, align 4
  %7 = load %struct.ioatdma_chan*, %struct.ioatdma_chan** %2, align 8
  %8 = getelementptr inbounds %struct.ioatdma_chan, %struct.ioatdma_chan* %7, i32 0, i32 1
  %9 = call i32 @test_bit(i32 %6, i32* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %1
  %12 = load %struct.ioatdma_chan*, %struct.ioatdma_chan** %2, align 8
  %13 = call i32 @__ioat_start_null_desc(%struct.ioatdma_chan* %12)
  br label %14

14:                                               ; preds = %11, %1
  %15 = load %struct.ioatdma_chan*, %struct.ioatdma_chan** %2, align 8
  %16 = getelementptr inbounds %struct.ioatdma_chan, %struct.ioatdma_chan* %15, i32 0, i32 0
  %17 = call i32 @spin_unlock_bh(i32* %16)
  ret void
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @test_bit(i32, i32*) #1

declare dso_local i32 @__ioat_start_null_desc(%struct.ioatdma_chan*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
